force-app/main/default/objects/JWT_Settings__mdt/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>