force-app/main/default/objects/JWT_Settings__mdt/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>ID</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>