force-app/main/default/objects/JWT_Settings__mdt/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <label>Issuer</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>